[tool.poe.tasks]
# run with eg `uv run poe fmt`
fmt = "ruff format"
lint = "ruff check --fix"
check = [{cmd = "basedpyright"}, {cmd = "ty check"}]
test = "pytest -vv -s"
cov = "pytest --cov=trye --cov-report=html"
all = [{ref = "fmt"}, {ref = "lint"}, {ref = "check"}, {ref = "test"}]

"ci:fmt" = "ruff format --check"
"ci:lint" = "ruff check"
"ci:check" = [{cmd = "basedpyright"}, {cmd = "ty check"}]
"ci:test" = "pytest --cov=trye --cov-report=xml"

[project]
name = "trye"
version = "0.1.2"
description = "Ergonomic exception handling for Python."
readme = "README.md"
authors = [
    { name = "Chris Arderne", email = "chris@rdrn.me" }
]
keywords = ["errors", "exceptions"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.14"

dependencies = [
]

[project.urls]
homepage = "https://github.com/carderne/trye"
repository = "https://github.com/carderne/trye"

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
    "ty>=0.0.20",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
  "A",    # warn about shadowing built-ins
  "E",    # style stuff, whitespaces
  "F",    # important pyflakes lints
  "I",    # import sorting
  "N",    # naming
  "T100", # breakpoints (probably don't want these in prod!)
]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.14"
reportExplicitAny = false
reportUnusedCallResult = false
reportAny = false

[tool.pytest.ini_options]
testpaths = ["tests"]
